Agregar iconos al footer.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,98 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-  
+
+:root {
+  background: transparent;
+  color: #000000;
+  margin: 0;  
+  --third-glow: conic-gradient(
+    from 90deg at 50% 50%,
+    #329bbb 0deg,
+    #ae77b2 160deg,
+    #7ed2da 120deg,
+    #8bdce0 55deg,
+    transparent 360deg;
+  );
+  --secondary-glow: conic-gradient(
+    from 10deg at 50% 50%,
+    #329bbb 0deg,
+    #ae77b2 55deg,
+    #97b5da 120deg,
+    #0099ca 160deg,
+    transparent 360deg;
+  );
+}
+
+body::before,
+body::after {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  opacity:0.8
+}
+
+body::before {
+  background: var(--third-glow);
+  border-radius: 50%;
+  width: 50vw;
+  height: 50vw;
+  margin-left: -200px;
+  filter:blur(90px);  
+  top: calc(50vh - 50vw/2);
+  left: calc(50vw );
+  animation: animateBefore 7s cubic-bezier(0.47, 0, 0.745, 0.715) infinite;
+}
+
+body::after {
+  background: var(--secondary-glow);
+  border-radius: 50%;
+  width: 500px;
+  height: 700px;
+  filter:blur(90px);
+  top: calc(50vh - 50vw/2);
+  left: calc(50vw - 50vw/2);
+  animation: animateAfter 7s cubic-bezier(0.47, 0, 0.745, 0.715) infinite;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainDiv{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family:'Prospect';
+  font-size:3rem;
+}
+
+.research{
+  margin: 2rem 0;
+  border-radius: 3vh;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  font-size: 1.5rem;
+  font-family: 'Helvetica';
+  padding: 0 1rem;
+}
+
+.line
+{
+  background-color: black;
+  display: flex;
+  flex-direction:row;
+  height:50vh;
+  width: 1px;
+
+}
 
 @layer base {
-  :root {
-      background: #b0d6fa;
-      color: #000000;
-      margin: 0;        
-
-      --secondary-glow: conic-gradient(
-        from 10deg at 50% 50%,
-        #eb7494 0deg,
-        #ae77b2 55deg,
-        #97b5da 120deg,
-        #0099ca 160deg,
-        transparent 360deg
-      );
-
-      --third-glow: conic-gradient(
-        from 90deg at 50% 50%,
-        #ff8b7e 0deg,
-        #e24e6b 160deg,
-        #7ed2da 120deg,
-        #8bdce0 55deg,
-        transparent 360deg
-      );
-  }
-
   .custom-scrollbar::-webkit-scrollbar {
       width: 4px;
       height: 4px;
@@ -62,50 +127,11 @@
   }
 
   .home-footer{
-    @apply flex flex-row p-2 gap-4 w-full h-24 justify-between bg-cyan-gradient;
+    @apply flex flex-row p-2 gap-4 w-full h-40 justify-between bg-cyan-gradient;
   }
 
   .home-footer-elements {
-    @apply flex flex-col items-center justify-center gap-4 py-4 tracking-wider;
-  }
-
-  .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 40vh 0 0 0;
-    min-height: 100vh;
-  }
-
-  .mainDiv{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family:'Prospect';
-    font-size:3rem;
-  }
-
-  .research{
-    margin: 2rem 0;
-    border-radius: 3vh;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 1.5rem;
-    font-family: 'Helvetica';
-    padding: 0 1rem;
-  }
-
-  .line
-  {
-    background-color: black;
-    display: flex;
-    flex-direction:row;
-    height:50vh;
-    width: 1px;
-
+    @apply flex flex-col items-center gap-2 p-4 ;
   }
 
   .btn-primary {
@@ -119,7 +145,7 @@ hover:rounded-lg hover:text-xl;
   }
 
   .btn-primary-right {
-    @apply hover:bg-cyan-400 hover:border-cyan-400;
+    @apply hover:bg-cyan-gradientInverse;
   }
 
 }
@@ -255,7 +281,12 @@ hover:rounded-lg hover:text-xl;
   .bg-cyan-gradient {
     @apply bg-gradient-to-r from-cyan-300 to-blue-800;
   }
+
+  .bg-cyan-gradientInverse {
+    @apply bg-gradient-to-r from-cyan-300 to-blue-700;
+  }
 }
+
 
 
 
