--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -129,7 +129,7 @@ body::after {
   }
 
   .home-navbar{
-    @apply flex flex-row p-2 gap-4 w-full h-24 justify-between bg-cyan-gradient;
+    @apply flex border-2 border-black p-2 gap-4 w-full h-24 justify-between bg-cyan-gradient;
   }
 
   .home-navbar-elements {
